@@ -1,3 +1,7 @@
+2007-03-14 8:38   nick
+
+	* plugins/tasklist/tasklist.c: Fix bug 3011: expand setting not saved.
+
 2007-03-10 16:07  nick
 
 	* plugins/launcher/launcher-dialog.c: Don't append the %f. Too much side effects as
